test/regress/coverage-wave2-annotate-err7.test
; Wave 2 coverage tests for annotate.cc error paths - double brace mismatch
; Covers: double brace closing mismatch (line 132)

2024/01/01 Double Brace Mismatch
    Assets:Test              1 FOO {{$100.00}
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Test              1 FOO {{$100.00}
                           ^^^^^^^^^^^^^^^^
Error: Commodity lot price lacks double closing brace
end test
